Remove unnecessary css, adjust image aspect ratio

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "photo-gallery",
-  "homepage": "https://Evan-cse.github.io/react-gh-pages",
+  "homepage": "https://Evan-cse.github.io/photo-gallery",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
